@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-17T02:25:41Z",
+  "timestamp" : "2022-10-17T08:37:35Z",
   "count_outdated" : 2501,
   "uniques_outdated" : 643,
-  "count" : 2544,
-  "uniques" : 670,
+  "count" : 2545,
+  "uniques" : 671,
   "clones" : [
     {
       "timestamp": "2022-10-07T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 2, 5 ],
       "uniques": 4,
       "uniques_minmax": [ 2, 4 ]
+    },
+    {
+      "timestamp": "2022-10-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
