@@ -1,5 +1,5 @@
 {
-  "count": 43,
+  "count": 44,
   "uniques": 19,
   "clones": [
     {
@@ -46,6 +46,11 @@
       "timestamp": "2022-10-16T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-10-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
